--- a/index.css
+++ b/index.css
@@ -1,152 +1,626 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;1,400;1,700&display=swap');
+
+:root {
+    --primaryColor: rgb(0, 0, 0);
+    --navColor1: #ffffff;
+    --navColor2: #f4f4f2;
+    --navColor3: #e8e8e8;
+    --navColor4: #bbbfca;
+    --navColor5: #777d86;
+}
+
+html {
     box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    background: #000;
+    font-family: 'Arvo', serif;
+    font-size: 2rem;
+}
+
+/* Navigation Menu */
+.overlay {
+    position: fixed;
+    z-index: 9;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    transform: translateX(-100vw);
+}
+
+.overlay-slide-right {
+    transition: all 0.4s ease-in-out;
+    transform: translateX(0);
+}
+
+.overlay-slide-left {
+    transition: all 0.8s ease-in-out;
+    transform: translateX(-100vw);
+}
+
+/* Nav Menu Items */
+nav,
+nav ul {
+    height: 100vh;
     margin: 0;
     padding: 0;
 }
 
-body {
-    background-color: rgb(202, 235, 197);
-    font-family: Work Sans, sans-serif, Arial, Helvetica, sans-serif;
-    margin: 1.2rem 4.4rem;
-    padding-top: 1.5rem;
-    padding-bottom: 3rem;
+nav ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    list-style: none;
 }
 
-body p {
-    padding-top: 1.5rem;
-    padding-bottom: 3rem;
+nav ul li {
+    height: 20%;
+    overflow: hidden;
+}
+
+nav li a {
+    position: relative;
+    top: 45%;
+    color: var(--primaryColor);
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    text-decoration: none;
+    display: block;
     text-align: center;
-    font-size: 3rem;
-    color: rgb(88, 85, 85);
+}
+
+nav li a:hover {
+    transform: scale(1.3);
+}
+
+nav li a::before {
+    content: "";
+    width: 25vw;
+    height: 3px;
+    background-color: rgb(65, 65, 65);
+    position: absolute;
+    top: 47.5%;
+    left: 0;
+    opacity: 0;
+}
+
+nav li a:hover::before {
+    opacity: 1;
+}
+
+nav li a::after {
+    content: "";
+    width: 30vw;
+    height: 3px;
+    background-color: rgb(65, 65, 65);
+    position: absolute;
+    top: 47.5%;
+    right: 0;
+    opacity: 0;
+}
+
+nav li a:hover::after {
+    opacity: 1;
+}
+
+nav li:nth-of-type(1) {
+    background-image: url("image/venice-g4ce513826_1920.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+nav li:nth-of-type(2) {
+    background-color: var(--navColor2);
+}
+
+nav li:nth-of-type(3) {
+    background-color: var(--navColor3);
+}
+
+nav li:nth-of-type(4) {
+    background-color: var(--navColor4);
+}
+
+nav li:nth-of-type(5) {
+    background-color: var(--navColor5);
+}
+
+/* Slide in animation with delay for each */
+.slide-in-1 {
+    animation: slide-in 0.25s linear 0.2s both;
+}
+
+.slide-in-2 {
+    animation: slide-in 0.25s linear 0.4s both;
+}
+
+.slide-in-3 {
+    animation: slide-in 0.25s linear 0.6s both;
+}
+
+.slide-in-4 {
+    animation: slide-in 0.25s linear 0.8s both;
+}
+
+.slide-in-5 {
+    animation: slide-in 0.25s linear 1s both;
+}
+
+@keyframes slide-in {
+    from {
+        transform: translateX(-100%);
+    }
+
+    to {
+        transform: translateX(0);
+    }
+}
+
+/* Slide out animation with delay for each */
+.slide-out-1 {
+    animation: slide-out 0.25s linear 0.25s both;
+}
+
+.slide-out-2 {
+    animation: slide-out 0.25s linear 0.4s both;
+}
+
+.slide-out-3 {
+    animation: slide-out 0.25s linear 0.25s both;
+}
+
+.slide-out-4 {
+    animation: slide-out 0.25s linear 0.2s both;
+}
+
+.slide-out-5 {
+    animation: slide-out 0.25s linear 0.1s both;
+}
+
+@keyframes slide-out {
+    from {
+        transform: translateX(0);
+    }
+
+    to {
+        transform: translateX(-100%);
+    }
+}
+
+/* Menu Bars*/
+
+.menu-bars {
+    position: fixed;
+    top: 1rem;
+    right: 2rem;
+    z-index: 10;
+    display: inline;
+    cursor: pointer;
+}
+
+.bar1,
+.bar2,
+.bar3 {
+    width: 35px;
+    height: 2px;
+    background-color: var(--navColor1);
+    margin: 8px 0;
+    transition: 0.4s;
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
+
+/* Rotate first bar */
+.change .bar1 {
+    transform: rotate(-45deg) translate(-7px, 8px);
+    background-color: var(--primaryColor);
+
+
+}
+
+/* Fade out the second bar */
+.change .bar2 {
+    opacity: 0;
+}
+
+/* Rotate last bar */
+.change .bar3 {
+    transform: rotate(45deg) translate(-6px, -8px);
+    background-color: var(--primaryColor);
+
+}
+
+/* Sections */
+section {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: var(--primaryColor);
+    text-align: center;
+}
+
+section#home {
+    background-image: url("image/gothic-g5654e0969_1920.jpg");
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
+
+}
+
+section#home a {
+    position: absolute;
+    z-index: 2;
+    top: 1.5rem;
+    left: 1.5rem;
+    text-decoration: none;
+    font-size: 1.5rem;
+    padding-bottom: 5px;
+    color: var(--navColor1);
+    border-bottom: 1px solid var(--navColor1);
+}
+
+section#about {
+    background-image: url("image/sunset-gaa714ee7b_1920.jpg");
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
+    color: #0022D4;
+}
+
+section#skills {
+    background-image: url("image/landscape-g9cba1f9f1_1920.jpg");
+    background-size: 100%;
+    background-position: top;
+    background-repeat: no-repeat;
+    color: #ffffff;
+}
+
+section#projects {
+    background-image: url("image/Medium\ image.png");
+    background-size: contain;
+    background-position: top;
+    background-repeat: no-repeat;
+    color: #ffffff;
+}
+
+section#contact {
+    background-image: url("image/venice-g4ce513826_1920.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: #ffffff
+}
+
+/* Media Query:*/
+@media (max-width: 1000px) {
+    section#home a {
+        font-size: 1rem;
+        font-weight: 700;
+        top: 1rem;
+        left: 1rem;
+
+    }
+
+    .menu-bars {
+        top: 0.5rem;
+        right: 1rem;
+    }
+}
+
+.footer-29 {
+    background-color: #002147;
+    display: grid;
+    color: #ffff;
+    font-family: Work Sans, Sans, sans-serif;
+    padding: 50px 100px;
 }
 
 .container {
+    background-color: transparent;
+    width: 100%;
+}
+
+.footer-top-29 {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 2fr 1fr 2fr 1fr;
+
+}
+
+footer ul {
+    margin-top: 0;
+}
+
+footer li {
+    font-size: 15px;
+    font-family: 400;
+    line-height: 25px;
+    list-style: none;
+    text-decoration: none;
+    /* padding-top: 45px; */
+}
+
+footer li a {
+    font-size: 16px;
+    font-family: 400;
+    line-height: 25px;
+    list-style: none;
+    text-decoration: none;
+    color: #fff;
+}
+
+footer p {
+    font-size: 16px;
+    font-family: 400;
+    line-height: 25px;
+    list-style: none;
+    text-decoration: none;
+    color: #fff;
+
+}
+
+.footer-1 {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.footer-2 {
+    margin-left: 15px;
+    margin-right: 15px;
+
+}
+
+.footer-3 {
+    margin-left: 15px;
+    margin-right: 35px;
+}
+
+form {
     display: flex;
-    flex-direction: column;
-    justify-content: flex;
-    justify-self: center;
-    align-items: center;
-    width: 70%;
-    margin: 0 auto;
-    background: rgb(151, 209, 185);
-    border-radius: 7px;
-    padding-bottom: 1rem;
-    padding-top: 1rem;
-    box-shadow: 3px 3px 1px 2px rgba(102, 96, 96, 0.32);
-    -webkit-box-shadow: 3px 3px 1px 2px rgba(102, 96, 96, 0.32);
-    -moz-box-shadow: 3px 3px 1px 2px rgba(102, 96, 96, 0.32);
-}
-
-.container p {
-    padding: 1rem 4.4rem;
-    font-size: 2rem;
-    text-align: center;
-    color: rgb(88, 85, 85);
-}
-
-.label-1 {
-    font-size: 1.5rem;
-    padding-left: 3rem;
-    padding-right: 1rem;
-    margin-top: 4rem;
-    margin-right: 1.2rem;
-
-}
-
-.videogame {
-    margin: 1.4rem 0.7rem;
-    color: #fff;
-    font-size: 1.5rem;
-    background: rgb(100, 117, 126);
-    border-radius: 5px;
-    border: none;
-    padding: 0.4rem 1.2rem;
-}
-
-.level-btn {
-    height: 2rem;
-    width: 2rem;
-    margin-top: 1rem;
-    margin-right: 0.6rem;
     padding: 0;
-    border-radius: 7px;
+    margin: 0;
+}
+
+form input {
+    background: rgba(26, 68, 116, 0.55);
     border: none;
-}
-
-.radiobtn {
-    height: 2rem;
-    width: 2rem;
-    border: none;
-    border-radius: 5px;
-}
-
-.radiobtn:active {
-    background-color: aqua;
-}
-
-.radiobtn:hover {
-    background: aqua;
-}
-
-#medium {
-    background: rgb(54, 64, 70);
-}
-
-.inner-label {
-    padding-right: 2.5rem;
-    font-size: 1.5rem;
-}
-
-.select-number {
-    margin: 1.5rem 0;
+    padding: 12px 20px;
+    font-size: 16px;
+    outline: none;
+    width: 70%;
     color: #fff;
-    font-size: 1.5rem;
-    background: rgb(100, 117, 126);
-    border-radius: 5px;
-    border: none;
-    padding: 0.5rem 0;
+    border-radius: 0.25rem 0 0 0.25rem;
+}
+
+form button {
     text-align: center;
-}
-
-.start-btn {
-    margin: 0 auto;
-    color: #fff;
-    font-size: 1.5rem;
-    background: rgb(100, 117, 126);
-    border-radius: 5px;
+    background: #dc3545;
     border: none;
-    padding: 0.7rem 20rem;
-    text-align: center;
-    text-decoration: none;
+    outline: none;
+    font-size: 16px;
+    cursor: pointer;
+    width: 56px;
+    border-radius: 0 0.25rem 0.25rem 0;
+    padding: 15px 20px;
+
 }
 
-.highscore-btn {
-    margin: 0 auto;
+.fa-envelope {
+    color: #07284e;
+
+}
+
+.fa-envelope-open {
+    color: #dc3545;
+    margin-right: 10px;
+
+}
+
+.fa-facebook-f {
     color: #fff;
-    font-size: 1.5rem;
     background: transparent;
-    border-radius: 5px;
-    border: none;
-    padding: 0.5rem 6rem;
-    text-align: center;
-    text-decoration: none;
+    border: 1px solid #fff;
+    font-size: 14px;
+    border-radius: 100%;
+    display: inline-block;
+    padding: 12px;
+    width: 11px;
+
 }
 
-@media only screen and (max-width: 390px) {
-    body {
-        margin-top: 0;
-        margin-left: 10%;
-        margin-right: 25%;
-        text-align: center;
+.fa-facebook-f:hover {
+    background: #3B5998;
+    border: none;
 
-    }
+}
 
-    .sub-title {
-        margin-bottom: 5px;
-        width: 100%;
-        padding: 0 5px 0 0 !important;
-        font-size: 1.5rem !important;
-        text-align: center !important;
+.fa-instagram {
+    color: #fff;
+    background: transparent;
+    border: 1px solid #fff;
+    font-size: 14px;
+    border-radius: 100%;
+    display: inline-block;
+    padding: 12px;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+}
 
-    }
+.fa-instagram:hover {
+    background: #C13584;
+    border: none;
+}
+
+.fa-whatsapp {
+    font-size: 14px;
+    background: transparent;
+    border: 1px solid #fff;
+    font-size: 14px;
+    border-radius: 100%;
+    display: inline-block;
+    padding: 12px;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+}
+
+.fa-whatsapp:hover {
+    background: rgba(12, 158, 44, 0.55);
+    border: none;
+}
+
+.fa-twitter {
+    font-size: 14px;
+    background: transparent;
+    border: 1px solid #fff;
+    font-size: 14px;
+    border-radius: 100%;
+    display: inline-block;
+    padding: 12px;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+}
+
+.fa-twitter:hover {
+    background: #359FF7;
+    border: none;
+}
+
+.fa-linkedin-in {
+    font-size: 14px;
+    background: transparent;
+    border: 1px solid #fff;
+    font-size: 14px;
+    border-radius: 100%;
+    display: inline-block;
+    padding: 12px;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    margin-left: 10px;
+}
+
+.fa-linkedin-in:hover {
+    background: #003A65;
+    border: none;
+}
+
+.fa-pinterest-p {
+    font-size: 14px;
+    background: transparent;
+    border: 1px solid #fff;
+    font-size: 14px;
+    border-radius: 100%;
+    display: inline-block;
+    padding: 12px;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+}
+
+.fa-pinterest-p:hover {
+    background: #DF0022;
+    border: none;
+}
+
+.fa-snapchat-ghost {
+    font-size: 14px;
+    background: transparent;
+    border: 1px solid #fff;
+    font-size: 14px;
+    border-radius: 100%;
+    display: inline-block;
+    padding: 12px;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    margin-left: 10px;
+}
+
+.fa-snapchat-ghost:hover {
+    background: #F7F400;
+    z-index: 9;
+    color: #fff;
+    border: none;
+}
+
+
+.fa-slack {
+    font-size: 14px;
+    background: transparent;
+    border: 1px solid #fff;
+    font-size: 14px;
+    border-radius: 100%;
+    display: inline-block;
+    padding: 12px;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    margin-left: 10px;
+}
+
+.fa-slack:hover {
+    background: #3D0F3D;
+    z-index: 9;
+    color: #fff;
+}
+
+.footer-4 li {
+    padding-top: 5px;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+footer h6 {
+    font-size: 20px;
+    line-height: 25px;
+    margin-top: 0;
+    margin-bottom: 25px;
+
+}
+
+.bottom-copies {
+    margin: 30px 15px 0 15px;
+    border-top: 1px solid rgb(78, 74, 74);
+}
+
+.bottom-copies a {
+    text-decoration: none;
+    color: #bbbfca;
+}
+
+.fa-map-marker-alt {
+    color: #dc3545;
+    margin-right: 10px;
+}
+
+.fa-phone-alt {
+    color: #dc3545;
+    margin-right: 10px;
+}
+
+.footer-2 button {
+    background-color: #123358;
+    border: none;
+    color: #002147;
+    cursor: pointer;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+.footer-2 button:hover {
+    background-color: #ad1086;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
 }
